--- a/webapp/js/directive/title.html
+++ b/webapp/js/directive/title.html
@@ -1,3 +1,3 @@
-<a href="/{{title.subject}}/{{title.id}}">{{title.title}}</a>
+<h4><a href="/{{title.subject}}/{{title.id}}">{{title.title}}</a></h4>
 <div>{{title.date}}</div>
 <div>{{title.writer}}</div>
