--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,23 +8,23 @@
     <link rel="stylesheet" href="/css/css.css">
 </head>
 <body ng-app="board">
-<header class="navbar navbar-static-top" ng-controller="headerController">
-    <div class="container">
+<header class="navbar navbar-default" ng-controller="headerController">
+    <div class="container-fluid">
         <div class="navbar-header">
-            <div class="navbar-brand">{{subject}}</div>
+            <a class="navbar-brand">{{subject}}</a>
+            <button type="button" class="navbar-toggle" ng-click="bar = !bar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
         </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a>즐겨찾기</a></li>
-                <li><a>인기검색어</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a>로그아웃</a></li>
-            </ul>
-        </div>
+        <ul class="collapse navbar-collapse nav navbar-nav navbar-right" ng-class="{'block':bar}">
+            <li><a ui-sref="service">즐겨찾기</a></li>
+            <li><a ui-sref="entrance.register">인기검색어</a></li>
+        </ul>
     </div>
 </header>
-
 
 <div class="container" ng-controller="searchController">
     <div class="input-group">
@@ -58,8 +58,10 @@
 <div class="container">
     <div ng-controller="loginController">
         <div ng-show="!user.logged">
-            <input type="text" ng-model="user.email"/>
-            <input type="password" ng-model="user.password"/>
+            <input class="form-control" regex="\w+@\w+?\.\w{1,4}$" message="이메일 형식이 맞지않습니다." type="text"
+                   ng-model="user.email"/>
+            <input class="form-control" regex=".{6,}" message="패스워드는 6자 이상입니다." type="password"
+                   ng-model="user.password"/>
 
             <div ng-click="login()">로그인</div>
             <div ng-click="register()">회원가입</div>
@@ -74,9 +76,10 @@
 <div ng-controller="mainController">
     <div ng-view></div>
 </div>
-
 <script src="/node_modules/angular/angular.min.js"></script>
+<script src="/node_modules/angular-animate/angular-animate.min.js"></script>
 <script src="/node_modules/angular-route/angular-route.min.js"></script>
+
 <script src="/js/js.js"></script>
 </body>
 </html>
