--- a/webapp/js/directive/article.html
+++ b/webapp/js/directive/article.html
@@ -6,8 +6,8 @@
         <div ng-show="hasRight()" ng-click="update()">수정</div>
     </div>
     <div ng-show="updateState">
-        <input ng-model="article.title">
-        <textarea ng-model="article.body"></textarea>
+        <input class="form-control" ng-model="article.title">
+        <textarea class="form-control" ng-model="article.body"></textarea>
 
         <div ng-click="updateDone()">수정완료</div>
     </div>
@@ -16,7 +16,9 @@
     <div ng-show="hasRight()" ng-click="delete()">삭제</div>
 
     <ul class="list-group">
-        <li class="list-group-item" ng-repeat="reply in replies">{{reply.writer}} {{reply.reply}} <small>{{reply.date}}</small> <span ng-click="deleteReply(reply.id)" ng-show="user.email == reply.writer">삭제</span></li>
+        <li class="list-group-item" ng-repeat="reply in replies">{{reply.writer}} {{reply.reply}}
+            <small>{{reply.date}}</small>
+            <span ng-click="deleteReply(reply.id)" ng-show="user.email == reply.writer">삭제</span></li>
         <li class="list-group-item" ng-click="getReplies();" ng-show="!info.end">리플더보기</li>
     </ul>
     <div class="input-group">
